<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.reactome.server.interactors</groupId>
    <artifactId>interactor-core</artifactId>
    <packaging>jar</packaging>
    <version>1.1.0-SNAPSHOT</version>

    <name>Interactors Core</name>

    <developers>
        <developer>
            <id>gviteri</id>
            <name>Guilherme S Viteri</name>
            <email>gviteri@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
    </developers>

    <properties>
        <micluster.version>1.7.14</micluster.version>
        <psimitab.version>1.8.6</psimitab.version>
        <sqlite.version>3.34.0</sqlite.version>
        <supercsv.version>2.4.0</supercsv.version>
        <reflection.version>0.9.12</reflection.version>
        <jsap.version>2.1</jsap.version>
        <concurrent.tree.version>2.6.1</concurrent.tree.version>
        <jackson.databind.version>2.12.3</jackson.databind.version>
        <kryo.version>5.1.0</kryo.version>
        <logging.version>1.3.0-alpha5</logging.version>
        <commons.io.version>2.9.0</commons.io.version>
        <junit.version>5.8.0-M1</junit.version>


        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.source.version>3.2.1</maven.source.version>
        <maven.assembly.version>3.3.0</maven.assembly.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.jar.version>3.2.0</maven.jar.version>

    </properties>

    <dependencies>
        <!-- MI Cluster dependency -->
        <dependency>
            <groupId>uk.ac.ebi.enfin.mi.cluster</groupId>
            <artifactId>micluster</artifactId>
            <version>${micluster.version}</version>
        </dependency>

        <dependency>
            <groupId>psidev.psi.mi</groupId>
            <artifactId>psimitab</artifactId>
            <version>${psimitab.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <!-- Excluded to use the commons-io -->
                <exclusion>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>com.springsource.org.apache.commons.io</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Kryo serializer -->
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
            <version>${kryo.version}</version>
        </dependency>

        <!-- Jackson JSON Processor -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Radix-tree for the token file format -->
        <dependency>
            <groupId>com.googlecode.concurrent-trees</groupId>
            <artifactId>concurrent-trees</artifactId>
            <version>${concurrent.tree.version}</version>
        </dependency>

        <!-- JSAP command line parameters parser -->
        <dependency>
            <groupId>com.martiansoftware</groupId>
            <artifactId>jsap</artifactId>
            <version>${jsap.version}</version>
        </dependency>

        <!-- SQLite JDBC -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite.version}</version>
        </dependency>

        <!-- JUNIT -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logging.version}</version>
        </dependency>

        <!-- SuperCSV -->
        <dependency>
            <groupId>net.sf.supercsv</groupId>
            <artifactId>super-csv</artifactId>
            <version>${supercsv.version}</version>
        </dependency>

        <!-- Reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflection.version}</version>
        </dependency>

        <!-- Commons -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <excludes>
                        <exclude>**/logback.xml</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.reactome.server.interactors.IntactParser</mainClass>
                        </manifest>
                    </archive>
                    <finalName>InteractorsParser</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- Needed for MI-CLUSTER-->
        <repository>
            <id>nexus</id>
            <name>European Bioinformatics Institute</name>
            <url>https://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
        </repository>

        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central_1</id>
            <name>Maven Repository Switchboard</name>
            <url>https://repo1.maven.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- EBI repo -->
        <repository>
            <id>nexus-ebi-repo</id>
            <name>The EBI internal repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <repository>
            <id>nexus-ebi-snapshot-repo</id>
            <name>The EBI internal snapshot repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>


    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>